@@ -1,3 +1,10 @@
+2006-12-27  Danilo Šegan  <danilo@gnome.org>
+
+	Implement bug #104312.
+
+	* update-stats.py (LocStatistics.po_file_stats): Add UTF-8
+	encoding check for PO files.
+
 2006-12-18  Danilo Šegan  <danilo@gnome.org>
 
 	* gnome-modules.xml.in: Add tracker.
